--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,3 +1,3 @@
-test.input.file=src/test/resources/savegame/Player.chr
+test.character.file=src/test/resources/savegame/Player.chr
 # LOGGING
-logging.level.test.java.tq.character.editor=DEBUG
+logging.level.tq.character.editor=DEBUG
