--- a/ComponentTests/src/test/resources/application.properties
+++ b/ComponentTests/src/test/resources/application.properties
@@ -1,3 +1,12 @@
 test.character.file=src/test/resources/savegame/Player.chr
 # LOGGING
 logging.level.tq.character.editor=DEBUG
+# EMBEDDED DB
+spring.datasource.url=jdbc:h2:mem:tqdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+server.port=8080
+# Embedded DB Debugging
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
