--- a/ComponentTests/src/test/resources/application.properties
+++ b/ComponentTests/src/test/resources/application.properties
@@ -2,7 +2,7 @@ test.character.file=src/test/resources/savegame/Player.chr
 # LOGGING
 logging.level.tq.character.editor=DEBUG
 # EMBEDDED DB
-spring.datasource.url=jdbc:h2:mem:tqdb
+spring.datasource.url=jdbc:h2:mem:tqdb;MODE=MYSQL
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
