--- a/ComponentTests/src/test/resources/application.properties
+++ b/ComponentTests/src/test/resources/application.properties
@@ -7,6 +7,6 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 server.port=8080
-# Embedded DB Debugging
+# EMBEDDED DB DEBUGGING
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
