--- a/Application/src/main/resources/application.properties
+++ b/Application/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 # LOGGING
 logging.level.root=INFO
 logging.level.tq.character.editor=DEBUG
-# Embedded DB
+# EMBEDDED DB
 spring.datasource.url=jdbc:h2:mem:tqdb;MODE=MYSQL
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+server.port=8080
