Moved hard coded properties to properties file, Added new event for data layer being ready to use

--- a/Application/src/main/resources/application.properties
+++ b/Application/src/main/resources/application.properties
@@ -1,3 +1,8 @@
+# APPLICATION
+editor.player.min.level=1
+editor.player.max.level=75
+editor.player.skills.gain=3
+editor.player.attributes.gain=2
 # LOGGING
 logging.level.root=INFO
 logging.level.tq.character.editor=DEBUG
