--- a/ComponentTests/src/test/resources/application.properties
+++ b/ComponentTests/src/test/resources/application.properties
@@ -1,3 +1,8 @@
+# APPLICATION
+editor.player.min.level=1
+editor.player.max.level=75
+editor.player.skills.gain=3
+editor.player.attributes.gain=2
 test.character.file=src/test/resources/savegame/Player.chr
 # LOGGING
 logging.level.tq.character.editor=DEBUG
