--- a/Application/pom.xml
+++ b/Application/pom.xml
@@ -25,6 +25,10 @@
             <artifactId>slf4j-api</artifactId>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>
         <!-- EMBEDDED DB -->
         <dependency>
             <groupId>com.h2database</groupId>
