--- a/ComponentTests/src/test/resources/application.properties
+++ b/ComponentTests/src/test/resources/application.properties
@@ -2,8 +2,8 @@
 editor.live.boot=false
 editor.player.min.level=1
 editor.player.max.level=75
-editor.player.skills.gain=3
-editor.player.attributes.gain=2
+editor.player.skills.per.level=3
+editor.player.attributes.per.level=2
 test.character.file=src/test/resources/savegame/Player.chr
 # LOGGING
 logging.level.tq.character.editor=DEBUG
