--- a/Application/src/main/resources/application.properties
+++ b/Application/src/main/resources/application.properties
@@ -2,8 +2,8 @@
 editor.live.boot=true
 editor.player.min.level=1
 editor.player.max.level=75
-editor.player.skills.gain=3
-editor.player.attributes.gain=2
+editor.player.skills.per.level=3
+editor.player.attributes.per.level=2
 # LOGGING
 logging.level.root=INFO
 logging.level.tq.character.editor=DEBUG
