--- a/Application/src/main/resources/application.properties
+++ b/Application/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 # APPLICATION
 editor.live.boot=true
+editor.player.min.attribute=50
+editor.player.min.fluid=300
 editor.player.min.level=1
 editor.player.max.level=75
 editor.player.skills.per.level=3
