Changed name of the collection word for str,dex & int

--- a/Application/src/main/resources/application.properties
+++ b/Application/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # APPLICATION
 editor.live.boot=true
-editor.player.min.attribute=50
+editor.player.min.characteristic=50
 editor.player.min.fluid=300
 editor.player.min.level=1
 editor.player.max.level=75
