--- a/Application/src/test/resources/application.properties
+++ b/Application/src/test/resources/application.properties
@@ -1,3 +1,5 @@
-test.character.file=src/test/resources/savegame/Player.chr
+# APPLICATION
+editor.player.min.characteristic=50
+editor.player.min.fluid=300
 # LOGGING
 logging.level.tq.character.editor=DEBUG
