--- a/Application/src/main/resources/application.properties
+++ b/Application/src/main/resources/application.properties
@@ -8,7 +8,7 @@ editor.player.skills.per.level=3
 editor.player.attributes.per.level=2
 # LOGGING
 logging.level.root=INFO
-logging.level.tq.character.editor=DEBUG
+logging.level.tq.character.editor=INFO
 # EMBEDDED DB
 spring.datasource.url=jdbc:h2:mem:tqdb;MODE=MYSQL
 spring.datasource.driverClassName=org.h2.Driver
