--- a/pom.xml
+++ b/pom.xml
@@ -6,9 +6,9 @@
     <packaging>pom</packaging>
 
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.3.5.RELEASE</version>
+        <groupId>com.github.stromner</groupId>
+        <artifactId>ace</artifactId>
+        <version>75</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
@@ -38,6 +38,21 @@
                 <configuration>
                     <classifier>exec</classifier>
                     <mainClass>tq.character.editor.TqCharacterEditor</mainClass>
+                </configuration>
+            </plugin>
+            <!-- Skip plugins from parent pom -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-gpg-plugin</artifactId>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <configuration>
+                    <skip>true</skip>
                 </configuration>
             </plugin>
         </plugins>
