--- a/ComponentTests/pom.xml
+++ b/ComponentTests/pom.xml
@@ -3,8 +3,8 @@
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>TQCharacterEditor</artifactId>
-        <groupId>tq.character.editor</groupId>
+        <groupId>com.github.stromner</groupId>
+        <artifactId>tq-character-editor</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
