--- a/Application/pom.xml
+++ b/Application/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>Application</artifactId>
+    <artifactId>tq-character-editor-application</artifactId>
     <version>1.0-SNAPSHOT</version>
     <name>TQCharacterEditor::Application</name>
 
