--- a/ComponentTests/pom.xml
+++ b/ComponentTests/pom.xml
@@ -9,15 +9,15 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>ComponentTests</artifactId>
+    <artifactId>tq-character-editor-component-tests</artifactId>
     <version>1.0-SNAPSHOT</version>
     <name>TQCharacterEditor::ComponentTests</name>
 
     <dependencies>
         <!-- INTERNAL -->
         <dependency>
-            <groupId>tq.character.editor</groupId>
-            <artifactId>Application</artifactId>
+            <groupId>com.github.stromner</groupId>
+            <artifactId>tq-character-editor-application</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <!-- TEST FRAMEWORK -->
