Updated missed renaming

--- a/ComponentTests/src/test/resources/application.properties
+++ b/ComponentTests/src/test/resources/application.properties
@@ -8,7 +8,7 @@ editor.player.skills.per.level=3
 editor.player.attributes.per.level=2
 test.character.file=src/test/resources/savegame/Player.chr
 # LOGGING
-logging.level.tq.character.editor=DEBUG
+logging.level.ace.titan.quest=DEBUG
 # EMBEDDED DB
 spring.datasource.url=jdbc:h2:mem:tqdb;MODE=MYSQL
 spring.datasource.driverClassName=org.h2.Driver
