--- a/Application/src/test/resources/application.properties
+++ b/Application/src/test/resources/application.properties
@@ -2,4 +2,4 @@
 editor.player.min.characteristic=50
 editor.player.min.fluid=300
 # LOGGING
-logging.level.tq.character.editor=DEBUG
+logging.level.ace.titan.quest=DEBUG
